--- a/client/src/components/home.component.html
+++ b/client/src/components/home.component.html
@@ -1,1 +1,10 @@
-<h1>Home</h1>
+<div>
+  <h1>Home</h1>
+  <!-- <youtube-player 
+  videoId="Ygo5VcMGMCs"
+  suggestedQuality="highres">
+
+  </youtube-player> -->
+
+  <video-player></video-player>
+</div>
