--- a/client/src/components/home.component.html
+++ b/client/src/components/home.component.html
@@ -1,10 +1,5 @@
 <div>
   <h1>Home</h1>
-  <!-- <youtube-player 
-  videoId="Ygo5VcMGMCs"
-  suggestedQuality="highres">
 
-  </youtube-player> -->
-
-  <video-player></video-player>
+  <video-container></video-container>
 </div>
