Added row of videos.

--- a/client/src/components/home.component.html
+++ b/client/src/components/home.component.html
@@ -1,5 +1,7 @@
 <div>
   <h1>Home</h1>
 
-  <video-container></video-container>
+  <video-container 
+    [innerWidth]=innerWidth
+  ></video-container>
 </div>
