--- a/client/src/components/video-container/video-container.component.html
+++ b/client/src/components/video-container/video-container.component.html
@@ -1,6 +1,7 @@
-<p>video-container works!</p>
-<div *ngFor="let video of videos">
+<div class="video-container" *ngFor="let video of videos">
   <video-player 
-    [video]=video>
+    [video]=video
+    [innerWidth]=innerWidth
+    [videosPerRow]=videosPerRow>
   </video-player>
 </div>
