--- a/client/src/components/video/video.component.html
+++ b/client/src/components/video/video.component.html
@@ -1,4 +1,6 @@
   <youtube-player 
     videoId="{{video.id}}"
-    suggestedQuality="highres">
+    suggestedQuality="highres"
+    width="{{getWidth()}}"
+    height="{{getHeight()">
   </youtube-player>
