Added play icon over thumbnail.  Added video service.

--- a/client/src/components/home.component.html
+++ b/client/src/components/home.component.html
@@ -1,7 +1,10 @@
 <div>
   <h1>Home</h1>
 
-  <video-container 
+  <video-thumbnail-container 
     [innerWidth]=innerWidth
-  ></video-container>
+    [videosPerRow]=videosPerRow
+    [videos]=videos>
+  </video-thumbnail-container>
+
 </div>
