--- a/client/src/components/video/video.component.html
+++ b/client/src/components/video/video.component.html
@@ -1,6 +1,6 @@
   <youtube-player 
     videoId="{{video.id}}"
     suggestedQuality="highres"
-    width="{{getWidth()}}"
-    height="{{getHeight()">
+    width="{{width}}"
+    height="{{height}}">
   </youtube-player>
