Added play-video component, route and link to it in the home component.

--- a/client/src/components/video-thumbnail/video-thumbnail.component.html
+++ b/client/src/components/video-thumbnail/video-thumbnail.component.html
@@ -1,4 +1,4 @@
-<div class="thumbnail-container">
+<a class="thumbnail-container" [routerLink]="['/video', video.id]">
   <fa-icon [icon]="faPlay" size="2x"></fa-icon>
   <img src="{{thumbnailUrl}}" width="{{width}}" height="auto"/>
-</div>
+</a>
