--- a/client/src/components/home.component.html
+++ b/client/src/components/home.component.html
@@ -7,10 +7,10 @@
     [videos]=videos>
   </video-thumbnail-container>
 
-  <div class="google-btn" (click)="signInWithGoogle()">
+  <a class="google-btn" href="/api/auth/google">
     <div class="google-icon-wrapper">
       <img class="google-icon-svg" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
     </div>
     <p class="btn-text"><b>Sign in with Google</b></p>
-  </div>
+  </a>
 </div>
