--- a/src/components/video-thumbnail-container/video-thumbnail-container.component.html
+++ b/src/components/video-thumbnail-container/video-thumbnail-container.component.html
@@ -1,7 +1,7 @@
 <div class="thumbnail-container" *ngFor="let video of videos">
   <video-thumbnail 
     [video]=video
-    [thumbnailUrl]=getThumbnailUrl(video.id)
+    [thumbnailUrl]=getThumbnailUrl(video)
     [height]=getHeight()
     [width]=getWidth()>
   </video-thumbnail>
