--- a/src/components/video-thumbnail/video-thumbnail.component.html
+++ b/src/components/video-thumbnail/video-thumbnail.component.html
@@ -1,4 +1,4 @@
-<a class="thumbnail-container" [routerLink]="['/video', video.id]">
+<a class="thumbnail-container" [routerLink]="['/video', video.snippet.resourceId.videoId]">
   <fa-icon [icon]="faPlay" size="2x"></fa-icon>
   <img src="{{thumbnailUrl}}" width="{{width}}" height="auto"/>
 </a>
