--- a/src/components/login/login.component.scss
+++ b/src/components/login/login.component.scss
@@ -1,54 +1,37 @@
+:host {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: .5rem;
+}
 
 
 .google-btn {
-  margin: 25px;
-  width: 80%;
-  min-width: 184px;
-  max-width: 184px;
-  height: 42px;
-  background-color: #fcfcfc;
-  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .2);
   cursor: pointer;
-  cursor: hand;
-  align-self: center;
-  user-select: none;
-  transition: all 400ms ease 0s;
-  display: flex;
-}
-.google-btn .google-icon-wrapper {
-  position: absolute;
-  margin-top: 1px;
-  margin-left: 1px;
-  width: 40px;
-  height: 40px;
-  border-radius: 2px;
-  user-select: none
-}
-.google-btn .google-icon-svg {
-  position: absolute;
-  margin-top: 11px;
-  margin-left: 11px;
-  width: 18px;
-  height: 18px;
-  user-select: none
-}
-.google-btn .btn-text {
-  float: right;
-  margin: 11px 14px 40px 40px;
-  color: #757575;
-  font-size: 14px;
-  letter-spacing: .2px;
-  font-family: Roboto;
-  user-select: none
-}
-.google-btn:hover {
-  box-shadow: 0 3px 8px rgba(117, 117, 117, .5);
-  user-select: none
-}
-.google-btn:active {
-  box-shadow: 0 1px 1px #757575;
-  background: #F8F8F8;
-  color: #fff;
-  user-select: none
+  text-decoration: none;
+  width: min-content;
+  min-width: 170px;
+  margin-top: .5rem;
+
+  .google-icon-wrapper {
+    .google-icon-svg {
+      height: 1rem;
+    }
+  }
+  .btn-text {
+    color: #757575;
+    font-size: 14px;
+    letter-spacing: .2px;
+    font-family: 'Roboto';
+    user-select: none;
+    text-decoration: none;
+    margin: .5rem .25rem;
+  }
+  .google-icon-wrapper, .btn-text {
+    padding: .25rem;
+  }
 }
