--- a/src/components/navigation/navigation.component.html
+++ b/src/components/navigation/navigation.component.html
@@ -7,7 +7,9 @@
       <div class="dropdown-item" (click)="logout()">Log out</div>
     </div>
   </div>
+  <div class="nav-item">
+    <span class="title">My Random Youtube</span>
+  </div>
   <div class="nav-item ">
-
   </div>
 </nav>
