--- a/src/components/navigation/navigation.component.scss
+++ b/src/components/navigation/navigation.component.scss
@@ -11,6 +11,10 @@ nav {
     flex: 1;
     border-radius: .25rem;
     cursor: pointer;
+
+    .title {
+      text-align: center;
+    }
   }
 
   .dropdown i:hover {
