--- a/src/components/play-video/play-video.component.html
+++ b/src/components/play-video/play-video.component.html
@@ -1,5 +1,6 @@
 <div class="nav">
-  <fa-icon class="icon" [icon]="faArrowLeft" size="2x" (click)="back()"></fa-icon>
+  <!-- <fa-icon class="icon" [icon]="faArrowLeft" size="2x"> </fa-icon> -->
+  <i class="fa fa-arrow-left" (click)="back()"></i>
 </div>
 <div class="center-container">
   <youtube-player 
