--- a/src/components/video-thumbnail/video-thumbnail.component.html
+++ b/src/components/video-thumbnail/video-thumbnail.component.html
@@ -1,4 +1,4 @@
 <a class="thumbnail-container" [routerLink]="['/video', video.snippet.resourceId.videoId]">
   <i class="fa fa-play"></i>
-  <img src="{{thumbnailUrl}}" width="{{width}}" height="auto"/>
+  <img src="{{thumbnailUrl}}" width="150px" height="auto"/>
 </a>
