--- a/src/components/navigation/navigation.component.html
+++ b/src/components/navigation/navigation.component.html
@@ -4,12 +4,13 @@
     <a class="dropbtn"><i class="fa fa-bars"></i></a>
     <div class="dropdown-content">
       <!-- <div>Login</div> -->
-      <div class="dropdown-item" (click)="logout()">Log out</div>
+      <div class="dropdown-item" (click)="logout()" *ngIf="user.loggedIn === true">Log out</div>
     </div>
   </div>
-  <div class="nav-item">
-    <span class="title">My Random Youtube</span>
+  <div class="nav-item title">
+    <span>My Random Youtube</span>
   </div>
-  <div class="nav-item ">
+  <div class="nav-item user">
+    <span *ngIf="user.loggedIn === true">Welcome, {{user.name}}</span>
   </div>
 </nav>
