--- a/src/components/video-thumbnail/video-thumbnail.component.scss
+++ b/src/components/video-thumbnail/video-thumbnail.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: .5rem;
+  padding: .25rem;
 
   .fa {
     position: absolute;
