--- a/src/components/home.component.scss
+++ b/src/components/home.component.scss
@@ -1,54 +1,30 @@
+.overlay {
+    /* Height & width depends on how you want to reveal the overlay (see JS below) */   
+    height: 100%;
+    width: 100%;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    background-color: rgb(0,0,0); /* Black fallback color */
+    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+    // overflow-x: hidden; /* Disable horizontal scroll */
+    transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+    top: 34px;
+    transition: opacity 3s ease-in-out;
+      /* Position the content inside the overlay */
+  .overlay-content {
+    position: relative;
+    top: 25%; /* 25% from the top */
+    width: 100%; /* 100% width */
+    text-align: center; /* Centered text/links */
+    margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
 
-
-.google-btn {
-    margin: 25px;
-    width: 80%;
-    min-width: 184px;
-    max-width: 184px;
-    height: 42px;
-    background-color: #fcfcfc;
-    border-radius: 2px;
-    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .2);
-    cursor: pointer;
-    cursor: hand;
-    align-self: center;
-    user-select: none;
-    transition: all 400ms ease 0s;
-    display: flex;
+    i {
+        font-size: 1.5rem;
+        color: lightgray;
+    }
+  }
+  
 }
-.google-btn .google-icon-wrapper {
-    position: absolute;
-    margin-top: 1px;
-    margin-left: 1px;
-    width: 40px;
-    height: 40px;
-    border-radius: 2px;
-    user-select: none
-}
-.google-btn .google-icon-svg {
-    position: absolute;
-    margin-top: 11px;
-    margin-left: 11px;
-    width: 18px;
-    height: 18px;
-    user-select: none
-}
-.google-btn .btn-text {
-    float: right;
-    margin: 11px 14px 40px 40px;
-    color: #757575;
-    font-size: 14px;
-    letter-spacing: .2px;
-    font-family: Roboto;
-    user-select: none
-}
-.google-btn:hover {
-    box-shadow: 0 3px 8px rgba(117, 117, 117, .5);
-    user-select: none
-}
-.google-btn:active {
-    box-shadow: 0 1px 1px #757575;
-    background: #F8F8F8;
-    color: #fff;
-    user-select: none
-}
+  
